# papersai

./: .pre-commit-config.yaml  justfile  pyproject.toml
.github/: FUNDING.yml  README.md
.github/workflows/: ci.yml  sync-hf-space.yml
examples/: rag_ui.py
papersai/: index.py  utils.py
papersai/cli/: daily_papers.py  qna.py  summarize.py  utils.py
papersai/engine/: summarize.py
papersai/ui/: app.py
tests/: test_utils.py
