[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
description = "reason about papers using LLMs"
name = "papersai"
version = "0.0.1"
authors = [{ name = "Saurav Maheshkar", email = "sauravvmaheshkar@gmail.com" }]
readme = ".github/README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "llama-index-core",
    "llama-index-readers-file",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-anthropic",
    "python-dotenv",
    "requests",
    "rich",
    "weave"
]

[project.optional-dependencies]
all = [
    "papersai[build]",
    "papersai[dev]",
    "papersai[ui]",
]
build = ["build", "twine"]
dev = ["pre-commit>=2.18.0", "pytest", "ruff"]
ui = [
    "gradio",
    "langchain>0.3.5",
    "langchain-anthropic",
    "langchain-huggingface"
]

[project.scripts]
papersai-summarize = "papersai.cli.summarize:summarize_cli"
papersai-qna = "papersai.cli.qna:qna_cli"
daily-papers-cli = "papersai.cli.daily_papers:daily_papers_cli"
papersai-ui = "papersai.ui.app:main"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I001", "W", "D206"]
ignore = ["W605"]

[tool.ruff.lint.isort]
lines-after-imports = 2
